fixed overflow on the x-axis

--- a/root/output.css
+++ b/root/output.css
@@ -1967,6 +1967,14 @@ html {
   position: fixed;
 }
 
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
 .sticky {
   position: sticky;
 }
@@ -2287,6 +2295,10 @@ html {
 
 .justify-self-center {
   justify-self: center;
+}
+
+.overflow-x-hidden {
+  overflow-x: hidden;
 }
 
 .overflow-y-hidden {
